@@ -90,6 +90,8 @@ Release 0.19.0 - Unreleased
    HBASE-1041  Migration throwing NPE
    HBASE-1042  OOME but we don't abort
    HBASE-927   We don't recover if HRS hosting -ROOT-/.META. goes down
+   HBASE-1043  Removing @Override attributes where they are no longer needed.
+
       
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
